# app-mechanics-workbook

./: .gitignore  01statics.qmd  02dynamics - Copy.html  02dynamics.qmd  02kinematics.qmd  03hydrostatics.qmd  04hydrodynamics.qmd  _quarto.yml  acknowledgements.qmd  attributions.qmd  chapter1.qmd  colophon.qmd  dedication.qmd  ex5_8_valve_box_balance.qmd  ex5_9_two_mass_disc_balance.qmd  formulae.qmd  hoop_stress.qmd  index.qmd  m1_balance_disc.qmd  m1_balance_disc.quarto_ipynb_1  notes.md  pyproject.toml  revision_history.qmd  script_template.qmd  test.py  tutorial_basic.qmd  unicode_math_symbols.qmd
docs/: 01statics.html  02dynamics.html  02kinematics.html  03hydrostatics.html  04hydrodynamics.html  CNAME  acknowledgements.html  attributions.html  author.html  colophon.html  dedication.html  formulae.html  greek_letters.html  index.html  references.html  revision_history.html  script_template.html  search.json  study_guide.html  tutorial_basic.html
python_scripts/: ch1_jib_tie_force..py  ch1_rope_tension.py  ch1_sling_equilateral.py  ch1_sling_isosceles.py  ch1_structural_force.py  ch2_angular_momentum.py  ch2_cable_tension.py  ch2_jet_impact.py  ch2_mooring_drum_torque.py  ch2_rotational_deceleration.py  ch2_rotational_kinetic_energy.py  ch3_hydraulic_press.py  ch3_hydrostatic_dock_gate.py  ch3_hydrostatic_gate_thrust.py  ch3_hydrostatic_load.py  ch3_layered_fluids.py  ch3_oil_tank.py  ch4_energy_equation.py  ch4_orifice_flow.py  ch4_pipe_flow_different_dia.py  ch4_pipe_flow_rate.py  ch4_venturi_meter.py  ch4_venturi_meter_mercury.py  template.py
